crates/hdk_derive/tests/hdk_extern/genesis_self_check_infallible_invalid_return.stderr
error: `genesis_self_check` must return `ValidateCallbackResult`
 --> tests/hdk_extern/genesis_self_check_infallible_invalid_return.rs:4:28
  |
4 | fn genesis_self_check() -> ExternResult<String> {
  |                            ^^^^^^^^^^^^
