crates/hdk_derive/tests/hdk_extern/genesis_self_check_infallible_invalid_return.rs
use hdk::prelude::*;

#[hdk_extern(infallible)] 
fn genesis_self_check() -> ExternResult<String> {
    Ok("wrong return type".into())
}

fn main() {}
